syntax = "proto3";

package com.acowg.peer_edge_proto;

service FileDeleteService {
  // Edge requests deletion of a file by catalog UUID
  rpc DeleteFile(FileDeleteRequest) returns (FileDeleteResponse);
}

message FileDeleteRequest {
  string catalog_uuid = 1;
}

message FileDeleteResponse {
  string catalog_uuid = 1;
  bool success = 2;
}